; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_gindatapage.c_dataExecPlaceToPage.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_gindatapage.c_dataExecPlaceToPage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32*, i8*, i32, i8*)* @dataExecPlaceToPage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dataExecPlaceToPage(i32 %0, i32 %1, i32* %2, i8* %3, i32 %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store i8* %5, i8** %12, align 8
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @BufferGetPage(i32 %14)
  store i32 %15, i32* %13, align 4
  %16 = load i32, i32* %13, align 4
  %17 = call i64 @GinPageIsLeaf(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %6
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load i32*, i32** %9, align 8
  %23 = load i8*, i8** %10, align 8
  %24 = load i8*, i8** %12, align 8
  %25 = call i32 @dataExecPlaceToPageLeaf(i32 %20, i32 %21, i32* %22, i8* %23, i8* %24)
  br label %34

26:                                               ; preds = %6
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* %8, align 4
  %29 = load i32*, i32** %9, align 8
  %30 = load i8*, i8** %10, align 8
  %31 = load i32, i32* %11, align 4
  %32 = load i8*, i8** %12, align 8
  %33 = call i32 @dataExecPlaceToPageInternal(i32 %27, i32 %28, i32* %29, i8* %30, i32 %31, i8* %32)
  br label %34

34:                                               ; preds = %26, %19
  ret void
}

declare dso_local i32 @BufferGetPage(i32) #1

declare dso_local i64 @GinPageIsLeaf(i32) #1

declare dso_local i32 @dataExecPlaceToPageLeaf(i32, i32, i32*, i8*, i8*) #1

declare dso_local i32 @dataExecPlaceToPageInternal(i32, i32, i32*, i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
